# aiserver

./: .gitignore  .replit  DEPLOY_GUIDE.md  GITHUB_SYNC_GUIDE.md  Hướng dẫn triển khai.md  PROXY_GUIDE.md  README.md  REPLIT_SETUP.md  app.py  app_fix_training.py  app_fixed.py  app_proxy.py  app_with_optimized_collector.py  binance_time.json  check_trained_models.sh  clean_source.py  code_sync_guide.md  config.py  continuous_trainer_fixed.py  data_fix_report.json  deploy.sh  deploy_from_github.sh  direct_train.py  enhanced_data_collector.py  enhanced_proxy_config.py  feature_engineering_fix.py  fix_error_instructions.md  fix_train_model.py  fixed_app.py  fixed_app_training.py  fixed_training_functions.py  force_train.py  force_training.signal  fresh_server_setup.sh  instructions_fix_training.md  keep_alive.sh  keep_alive_advanced.sh  keep_log.sh  model_trainer_copy.py  pandas_style_fix.py  (+30 more)
.streamlit/: config.toml
attached_assets/: Pasted--2025-03-23-06-18-45-035-app-INFO-Configuring-proxy-for-Binance-API-2025-03-23-06-18-45-035--1742710758634.txt  Pasted--Kh-i-l-ng-24h-0-00M-div-div-span-style-font-size-24px-span--1742552610130.txt  Pasted--Style-cho-c-c-container-div-data-testid-stVerticalBlock-div-background-color-white-bo-1742670329765.txt  Pasted--Using-cached-scipy-1-15-2-cp310-cp310-manylinux-2-17-x86-64-manylinux2014-x86-64-whl-37-6-MB-Col-1742598737585.txt  Pasted-2025-03-22-00-11-05-824-label-got-an-empty-value-This-is-discouraged-for-accessibility-reasons-an-1742602295475.txt  app.py  config.py  continuous_trainer.py  model_trainer.py  (+10 more)
dashboard/: charts.py  (+1 more)
(+91 files in other folders)
