[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.2.4",
    "openai>=1.68.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-binance>=1.0.28",
    "pytz>=2025.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.2",
    "tensorflow>=2.14.0",
    "twilio>=9.5.1",
]
