[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "binance>=0.3",
    "flask>=3.1.0",
    "numpy>=2.2.4",
    "openai>=1.68.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psutil>=7.0.0",
    "pysocks>=1.7.1",
    "python-binance==1.0.16",
    "python-dotenv>=1.0.1",
    "python-socks>=2.7.1",
    "pytz>=2025.1",
    "requests[socks]>=2.32.3",
    "scikit-learn>=1.6.1",
    "socks>=0",
    "streamlit>=1.43.2",
    "tensorflow>=2.14.0",
    "twilio>=9.5.1",
]
